--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,5 +18,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    - name: Change wrapper permissions
+      run: chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
